<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.anstag.app.database2.ShowActivity"
    tools:showIn="@layout/activity_show">

    <TableRow
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

            <TextView
                android:text="@string/first_name"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@id/firstName"/>

    </TableRow>
    <TableRow
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

            <TextView
                android:text="@string/last_name"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@id/lastName"/>

    </TableRow>
    <TableRow
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

            <TextView
                android:text="@string/phone"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@id/phone"/>

    </TableRow>
    <TableRow
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:padding="5dp">

            <TextView
                android:text="@string/email"
                android:paddingRight="10dp"/>

            <TextView
                android:id="@id/email"/>

    </TableRow>

</TableLayout>
